--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html lang="en">
     <head>
-	    <title>index</title>
+	    <title>AirBnB Clone</title>
         <style>
             header{
                 background-color:#FF0000;
