--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,6 +1,8 @@
 <!Doctype html>
 <html lang="en">
-	<head><title>index</title></head>
+	<head>
+	<title>AirBnB Clone</title>
+	</head>
     <header style="background-color:#FF0000; height: 70px; width: 100%;">
     </header>
     <footer style="background-color: #00FF00;height: 60px;width: 100%; bottom: 0; position: fixed;text-align: center" >
