--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="2-common.css">
         <link rel="stylesheet" href="2-header.css">
         <link rel="stylesheet" href="2-footer.css">
-	<title>index</title>
+	<title>AirBnB Clone</title>
     </head>
     <header>
     </header>
