--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="styles/4-common.css">
         <link rel="stylesheet" href="styles/3-header.css">
         <link rel="stylesheet" href="styles/3-footer.css">
-        <link rel="stylesheet" href="styles/4-filters.css">
+        <link rel="stylesheet" href="styles/5-filters.css">
         <link rel="icon" href="images/icon.png">
         <title>AirBnB Clone</title>
     </head>
@@ -14,6 +14,15 @@
     <div class="container" align="center">
         <section class="filters">
             <button type="search" class="button1">Search</button>
+            <div class="locations" align="left">
+                <h3>States</h3>
+                <h4>New-York, DC...</h4>
+            </div>
+            <div class="amenities" align="left">
+                <h3>Amenities</h3>
+                <h4>Internet, Gaming...</h4>
+            </div>
+            
         </section>
     </div>
     <footer>
