--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,9 +1,9 @@
 <!Doctype html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="3-common.css">
-        <link rel="stylesheet" href="3-header.css">
-        <link rel="stylesheet" href="3-footer.css">
+        <link rel="stylesheet" href="styles/3-common.css">
+        <link rel="stylesheet" href="styles/3-header.css">
+        <link rel="stylesheet" href="styles/3-footer.css">
         <link rel="icon" href="images/icon.png">
 	<title>AirBnB Clone</title>
     </head>
